Source/WebCore/platform/graphics/RoundedRect.h
@@ -27,6 +27,7 @@
 #ifndef RoundedRect_h
 #define RoundedRect_h
 
+#include "FloatQuad.h"
 #include "IntRect.h"
 
 namespace WebCore {
@@ -95,6 +96,10 @@ public:
 
     bool isRenderable() const;
     void adjustRadii();
+
+    // Tests whether the quad intersects any part of this rounded rectangle.
+    // This only works for convex quads.
+    bool intersectsQuad(const FloatQuad&) const;
 
 private:
     IntRect m_rect;
